NetBSD Problem Report #28712

From www@netbsd.org  Sun Dec 19 16:29:38 2004
Return-Path: <www@netbsd.org>
Received: by narn.netbsd.org (Postfix, from userid 31301)
	id 95D8763B843; Sun, 19 Dec 2004 16:29:38 +0000 (UTC)
Message-Id: <20041219162938.95D8763B843@narn.netbsd.org>
Date: Sun, 19 Dec 2004 16:29:38 +0000 (UTC)
From: joff@embeddedARM.com
Reply-To: joff@embeddedARM.com
To: gnats-bugs@netbsd.org
Subject: ext2fs hang on mount after fsck
X-Send-Pr-Version: www-1.0

>Number:         28712
>Category:       kern
>Synopsis:       ext2fs hang on mount after fsck
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    tsutsui
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Dec 19 16:30:00 +0000 2004
>Closed-Date:    Sat Oct 24 15:18:02 +0000 2009
>Last-Modified:  Sat Oct 24 15:18:02 +0000 2009
>Originator:     Jesse Off
>Release:        2.99.11
>Organization:
Technologic Systems
>Environment:
>Description:
Mounting ext2fs as root filesystem, fsck_ext2fs hangs after "MARKING FILESYSTEM CLEAN" in the mount syscall.

trace: pid 25 at 0xc2d4aba8
netbsd:mi_switch+0x10
        scp=0xc02a9c98 rlv=0xc02a9634 (netbsd:ltsleep+0x3a8)
        rsp=0xc2d4abac rfp=0xc2d4abe0
        r10=0x00000000 r9=0xc0388698
        r8=0x00000004 r7=0xc113ae14 r6=0xc2d38004 r5=0x00000000
        r4=0xc2c5c554
netbsd:ltsleep+0x10
        scp=0xc02a929c rlv=0xc02daa54 (netbsd:vinvalbuf+0x234)
        rsp=0xc2d4abe4 rfp=0xc2d4ac60
        r10=0xc2d38004 r9=0x00000000
        r8=0x00000000 r7=0xc23c4000 r6=0xc2c8d000 r5=0x00000000
        r4=0x00000000
netbsd:vinvalbuf+0x10
        scp=0xc02da830 rlv=0xc0259444 (netbsd:ext2fs_reload+0x324)
        rsp=0xc2d4ac64 rfp=0xc2d4ace0
        r10=0x00000000 r9=0xc2d11c94
        r8=0xc112a000 r7=0xc2c8d000 r6=0x000007e8 r5=0xc112fee0
        r4=0x0001b307
netbsd:ext2fs_reload+0x10
        scp=0xc0259130 rlv=0xc02590dc (netbsd:ext2fs_mount+0x4d8)
        rsp=0xc2d4ace4 rfp=0xc2d4adb8
        r10=0xc1128400 r9=0xc2d38004
        r8=0xc2c8d0a8 r7=0x00000000 r6=0xc2d4adf4 r5=0xc112e000
        r4=0xbfffe568
netbsd:ext2fs_mount+0x10
        scp=0xc0258c14 rlv=0xc02de3e8 (netbsd:sys_mount+0x218)
        rsp=0xc2d4adbc rfp=0xc2d4aee0
        r10=0x00005001 r9=0xc2d4adf4
        r8=0xc2c8d0a8 r7=0xc112e000 r6=0xc2d38004 r5=0xc2d4afb8
        r4=0x00000000
netbsd:sys_mount+0x10
        scp=0xc02de1e0 rlv=0xc0327ac4 (netbsd:syscall_plain+0x150)
        rsp=0xc2d4aee4 rfp=0xc2d4af60
        r10=0x00000004 r9=0x00000000
        r8=0xc2c5c554 r7=0xc039a758 r6=0xc2d4afb4 r5=0x00000004
        r4=0xefa00015
netbsd:syscall_plain+0x10
        scp=0xc0327984 rlv=0xc0327900 (netbsd:swi_handler+0x84)
        rsp=0xc2d4af64 rfp=0xc2d4afb0
        r10=0x0001d898 r9=0x00000000
        r8=0x00000001 r7=0xc041500c r6=0xc2d38004 r5=0x00000000
        r4=0xc2c5c554
netbsd:swi_handler+0x10
        scp=0xc032788c rlv=0xc032ab3c (netbsd:swi_entry+0x28)
        rsp=0xc2d4afb4 rfp=0xbfffeeb4
        r8=0x00037456 r7=0x0001d8b8
        r6=0x0001d938 r5=0x0001d1a4 r4=0x0003f0a4
>How-To-Repeat:
Make an ext2fs root filesystem dirty by unmounting uncleanly, and reboot.  fsck_ext2fs hangs forever doing a vinvalbuf()
>Fix:
unknown

>Release-Note:

>Audit-Trail:
From: Izumi Tsutsui <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/28712 CVS commit: src/sys/ufs/ext2fs
Date: Sat, 12 Sep 2009 02:32:14 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Sat Sep 12 02:32:14 UTC 2009

 Modified Files:
 	src/sys/ufs/ext2fs: ext2fs_vfsops.c

 Log Message:
 Add a missed brelse(9) call after bread(9) in ext2fs_reload().

 This may close PR kern/28712 (ext2fs hang on mount after fsck).


 To generate a diff of this commit:
 cvs rdiff -u -r1.147 -r1.148 src/sys/ufs/ext2fs/ext2fs_vfsops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: kern-bug-people->tsutsui
Responsible-Changed-By: tsutsui@NetBSD.org
Responsible-Changed-When: Sat, 12 Sep 2009 11:58:00 +0900
Responsible-Changed-Why:
I committed a possible fix.


State-Changed-From-To: open->feedback
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sat, 12 Sep 2009 11:58:00 +0900
State-Changed-Why:
Qemu with a dirty ext2fs root file system now boot multiuser here.
Could you confirm it on your environment?


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/28712 CVS commit: [netbsd-5] src/sys/ufs/ext2fs
Date: Fri, 16 Oct 2009 05:51:03 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Fri Oct 16 05:51:03 UTC 2009

 Modified Files:
 	src/sys/ufs/ext2fs [netbsd-5]: ext2fs_vfsops.c

 Log Message:
 Pull up following revision(s) (requested by tsutsui in ticket #1060):
 	sys/ufs/ext2fs/ext2fs_vfsops.c: revision 1.148
 Add a missed brelse(9) call after bread(9) in ext2fs_reload().
 This may close PR kern/28712 (ext2fs hang on mount after fsck).


 To generate a diff of this commit:
 cvs rdiff -u -r1.137.6.3 -r1.137.6.4 src/sys/ufs/ext2fs/ext2fs_vfsops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sun, 25 Oct 2009 00:18:02 +0900
State-Changed-Why:
No feedback yet, but confirmed on QEMU here.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.