Add a missed brelse(9) call after bread(9) in ext2fs_reload().

This may close PR kern/28712 (ext2fs hang on mount after fsck).